# kami-head

./: .gitignore  .gitmodules  README.md  ROS2_CODING_CONVENTIONS.md  mic_benchmark.py  requirements.txt
.github/workflows/: docs.yml
CAD/: Back_Cover_1.ipt  Back_Cover_2.ipt  Coffee_Machine_Base_L.ipt  Coffee_Machine_Base_Metal.ipt  Coffee_Machine_Base_R.ipt  Ear.ipt  Front_Case_1.ipt  Motor_Base_1.ipt  Motor_Base_2.ipt  Motor_Base_3.ipt  Motor_Cover_1.ipt  Motor_Cover_2.ipt  Motor_Cover_3.ipt  base 2 plate.ipt
CAD/OldVersions/: Back_Cover_1.0004.ipt  Back_Cover_2.0004.ipt  (+16 more)
coffee_ws/: README.md
coffee_ws/src/coffee_expressions_state_ui/: package.xml  setup.cfg  setup.py
coffee_ws/src/coffee_expressions_state_ui/coffee_expressions_state_ui/: state_ui_node.py
coffee_ws/src/coffee_expressions_test_ui/: README.md  package.xml  setup.cfg  setup.py
coffee_ws/src/coffee_expressions_test_ui/coffee_expressions_test_ui/: expressions_test_ui.py
coffee_ws/src/coffee_head_control/: README.md  package.xml  setup.cfg  setup.py
coffee_ws/src/coffee_head_control/coffee_head_control/: head_tracking.py
coffee_ws/src/coffee_head_control/launch/: head_tracking.launch.py
coffee_ws/src/coffee_llm_processor/: README.md  package.xml  setup.cfg  setup.py
coffee_ws/src/coffee_llm_processor/coffee_llm_processor/: constants.py
coffee_ws/src/coffee_llm_processor/coffee_llm_processor/language_model_processor_node/: llm_client.py  node.py
coffee_ws/src/coffee_speech_processing/: README.md  package.xml  setup.cfg  setup.py
coffee_ws/src/coffee_speech_processing/coffee_speech_processing/: __init__.py  constants.py
coffee_ws/src/coffee_speech_processing/coffee_speech_processing/sensor_nodes/: __init__.py
coffee_ws/src/coffee_speech_processing/coffee_speech_processing/sensor_nodes/llm_sensor_node/: node.py
coffee_ws/src/coffee_speech_processing/coffee_speech_processing/sensor_nodes/voice_intent_node/: intent_classifier.py  node.py  node_OLD.py
coffee_ws/src/coffee_speech_processing/coffee_speech_processing/utils/: __init__.py
coffee_ws/src/coffee_speech_processing/coffee_speech_processing/utils/whisper_streaming/: example.py  silero_vad_iterator.py
coffee_ws/src/coffee_speech_processing/coffee_speech_processing/voice_intent_node/: asr_manager.py  intent_classifier.py  memory_utils.py  node.py  node_OLD.py
coffee_ws/src/coffee_speech_processing/launch/: voice_intent.launch.py
coffee_ws/src/coffee_vision/: README.md  package.xml  setup.cfg  setup.py
coffee_ws/src/coffee_vision/coffee_vision/: camera_node.py  camera_node_mono.py  camera_viewer_test.py  coordinate_utils.py  data_types.py  face_detection.py  face_detection_node.py  recognition_memory.py
coffee_ws/src/coffee_vision/launch/: camera_viewer_test.launch.py  vision_nodes.launch.py
coffee_ws/src/coffee_voice_agent_ui/: README.md  package.xml  plugin.xml  setup.cfg  setup.py
coffee_ws/src/coffee_voice_agent_ui/coffee_voice_agent_ui/: emoji_utils.py  voice_agent_monitor.py  voice_agent_monitor_app.py
coffee_ws/src/coffee_voice_agent_ui/coffee_voice_agent_ui/widgets/: __init__.py  admin_override_widget.py  agent_status_widget.py  agent_status_widget_safe.py  analytics_widget.py  controls_widget.py  conversation_widget.py  emotion_display_widget.py  tool_monitor_widget.py  virtual_request_widget.py
coffee_ws/src/coffee_voice_agent_ui/launch/: full_system.launch.py  monitor.launch.py
coffee_ws/src/coffee_voice_service/: README.md  package.xml  setup.cfg  setup.py
coffee_ws/src/coffee_voice_service/coffee_voice_service/: __init__.py  tts_node.py
coffee_ws/src/coffee_voice_service/coffee_voice_service/tts_node/: node.py
coffee_ws/src/coffee_voice_service/launch/: tts_node.launch.py
coffee_ws/src/effector_nodes/: README.md  package.xml  setup.cfg  setup.py
coffee_ws/src/effector_nodes/effector_nodes/: __init__.py
coffee_ws/src/effector_nodes/effector_nodes/tts_node/: __init__.py  node.py
coffee_ws/src/effector_nodes/launch/: tts_node.launch.py
coffee_ws/src/perception_nodes/: README.md  package.xml  setup.py
coffee_ws/src/perception_nodes/launch/: voice_intent.launch.py
coffee_ws/src/perception_nodes/perception_nodes/: __init__.py  asr_manager.py  intent_classifier.py  memory_utils.py  voice_intent_node.py
coffee_ws/src/perception_nodes/perception_nodes/sensor_nodes/: __init__.py
coffee_ws/src/perception_nodes/perception_nodes/sensor_nodes/llm_sensor_node/: __init__.py  node.py
coffee_ws/src/perception_nodes/perception_nodes/sensor_nodes/vision_nodes/: __init__.py  vision_node.py
coffee_ws/src/perception_nodes/perception_nodes/sensor_nodes/vision_nodes/vision_emotion_node/: __init__.py  node.py
coffee_ws/src/perception_nodes/perception_nodes/sensor_nodes/vision_nodes/vision_face_position_node/: __init__.py  node.py
coffee_ws/src/perception_nodes/perception_nodes/sensor_nodes/voice_intent_node/: __init__.py  asr_manager.py  audio_processor.py  intent_classifier.py  memory_utils.py  node.py  node_OLD.py
coffee_ws/src/perception_nodes/perception_nodes/sensor_nodes/voice_nodes/: __init__.py
coffee_ws/src/perception_nodes/perception_nodes/sensor_nodes/voice_nodes/voice_intent_node/: asr_manager.py  node.py
coffee_ws/src/perception_nodes/perception_nodes/utils/: __init__.py
coffee_ws/src/perception_nodes/perception_nodes/utils/whisper_streaming/: __init__.py  silero_vad_iterator.py  whisper_online.py
coffee_ws/src/perception_nodes/perception_nodes/voice_intent_node/: asr_manager.py  audio_processor.py  node.py
coffee_ws/src/perception_nodes/perception_nodes/whisper_streaming/: __init__.py  whisper_online.py  whisper_online_server.py
requirements/: ai_requirements.txt  audio_requirements.txt  core_requirements.txt  nlp_requirements.txt  serial_requirements.txt  speech_requirements.txt  ui_requirements.txt  utility_requirements.txt
scripts/: activate_workspace.sh  configure_cyclonedds.sh  configure_serial_device_access.sh  fix_qt_and_run.sh  install_requirements.sh  ros2_venv.sh  ros_source.sh  setup_dds.sh  setup_env.sh  setup_ttyusb_udev.sh  setup_workspace.sh
(+282 files in other folders)
