<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coffee_expressions_state_ui</name>
  <version>0.0.0</version>
  <description>Qt-based UI for monitoring and controlling the coffee expressions state manager</description>
  <maintainer email="irvsteve@gmail.com">kpatch</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>coffee_expressions_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-qt5</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
