<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coffee_expressions_test_ui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="irvsteve@gmail.com">kpatch</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>coffee_expressions_msgs</depend>
  <depend>python3-pyqt5</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
