<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coffee_head_control</name>
  <version>0.0.0</version>
  <description>Head control package for Coffee Buddy robot with face tracking and motor control</description>
  <maintainer email="irvsteve@gmail.com">kpatch</maintainer>
  <license>TODO: License declaration</license>

  <!-- Core ROS dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Coffee Buddy specific messages -->
  <depend>coffee_expressions_msgs</depend>

  <!-- Motor control dependencies -->
  <depend>dynamixel_sdk_custom_interfaces</depend>

  <!-- GUI dependencies -->
  <depend>python_qt_binding</depend>
  <depend>python3-pyqt5</depend>

  <!-- Computer vision and math dependencies -->
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
