<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coffee_llm_processor</name>
  <version>0.0.0</version>
  <description>LLM processing package for Coffee Buddy robot system, providing conversational AI and response generation capabilities</description>
  <maintainer email="marcus@opendive.io">vr-workstation-2</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>coffee_llm_msgs</depend>
  <depend>coffee_machine_control_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
