<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coffee_speech_processing</name>
  <version>0.0.0</version>
  <description>Speech processing package for Coffee Buddy robot system, including speech recognition, intent classification, and emotion detection</description>
  <maintainer email="marcus@opendive.io">vr-workstation-2</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pyaudio</depend>
  <depend>python3-whisper</depend>
  <depend>python3-librosa</depend>
  <depend>python3-soundfile</depend>
  <depend>python3-torch</depend>
  <depend>coffee_llm_msgs</depend>
  <depend>coffee_buddy_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
