<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coffee_vision</name>
  <version>0.0.0</version>
  <description>Computer vision package with camera capture, face detection, and GUI interface</description>
  <maintainer email="irvsteve@gmail.com">kpatch</maintainer>
  <license>TODO: License declaration</license>

  <!-- Core ROS dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Computer vision dependencies -->
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>

  <!-- Qt GUI dependencies -->
  <depend>python_qt_binding</depend>
  <depend>python3-pyqt5</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
