<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_nodes</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Marcus.Arnett10@gmail.com">vr-workstation-2</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-pyaudio</depend>
  <depend>python3-whisper</depend>
  <depend>python3-librosa</depend>
  <depend>python3-soundfile</depend>
  <depend>python3-torch</depend>
  <depend>coffee_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
